--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Patternfly Seed</title>
+  <title>Quarkus Coffeeshop Homeoffice</title>
   <meta id="appName" name="application-name" content="Patternfly Seed">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="/images/favicon.png">
+  <link rel="icon" type="image/svg+xml" href="/images/favicon.ico">
   <base href="/">
 </head>
 
